<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#228b22"
    android:orientation="vertical" >
    
     <Space
        android:layout_width="match_parent"
        android:layout_height="10dip" />

    <ImageView
        android:id="@+id/mainScreen"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:contentDescription="@string/titleScreen"
        android:src="@drawable/akagi" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="10dip" />

    <!-- 新規作成ボタン -->

    <Button
        android:id="@+id/btnNew"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="#c0c0c0"
        android:text="@string/newGame" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="5dip" />

    <!-- 編集ボタン -->

    <Button
        android:id="@+id/btnEdit"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="#c0c0c0"
        android:text="@string/editGame" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="5dip" />

    <!-- 対戦成績ボタン -->

    <Button
        android:id="@+id/btnSet"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="#c0c0c0"
        android:text="@string/showScore" />

</LinearLayout>