<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#228b22"
    android:orientation="vertical" >

    <!-- 得点入力ボタン -->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/player1"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/edittext1"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:inputType="number" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/point"
            android:textSize="20sp" />

        <Space
            android:layout_width="5dip"
            android:layout_height="match_parent" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="持ち点:"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/txtResult1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/result"
            android:textSize="20sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/point"
            android:textSize="20sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/player2"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/edittext2"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:inputType="number" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/point"
            android:textSize="20sp" />

        <Space
            android:layout_width="5dip"
            android:layout_height="match_parent" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="持ち点:"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/txtResult2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/result"
            android:textSize="20sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/point"
            android:textSize="20sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/player3"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/edittext3"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:inputType="number" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/point"
            android:textSize="20sp" />

        <Space
            android:layout_width="5dip"
            android:layout_height="match_parent" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="持ち点:"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/txtResult3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/result"
            android:textSize="20sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/point"
            android:textSize="20sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/player4"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/edittext4"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:inputType="number" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/point"
            android:textSize="20sp" />

        <Space
            android:layout_width="5dip"
            android:layout_height="match_parent" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="持ち点:"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/txtResult4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/result"
            android:textSize="20sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/point"
            android:textSize="20sp" />
    </LinearLayout>

    <!-- 半荘精算終了ボタン -->

    <Button
        android:id="@+id/btnEndHalfGame"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/endHalfGame" />

    <!-- 全部終了ボタン -->

    <Button
        android:id="@+id/btnEndGame"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/endGame" />

</LinearLayout>